# shared_ptr_lesson

./: .gitignore  CMakeLists.txt  README.md  canvas.h  console_color.cpp  console_color.h  dashed_border.cpp  lesson_print.cpp  shape.h  texture.cpp  texture.h  types.h  utf8_table.h
src/: canvas.cpp  dashed_border.h  lesson_print.h  main.cpp  shape.cpp  textures_factory.cpp  textures_factory.h  utf8_table.cpp
